--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "findconsole": "./test/lib/huntForTheConsoles.sh test || true",
     "start": "gulp",
     "test": "gulp transpileTS && LOGGER_DISABLED=1 NODE_ENV=test mocha --bail --recursive --sort --full-trace ./dist/test"
+    "lint": "eslint"
   },
   "author": "",
   "license": "ISC",
