--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "findonly": "./test/lib/huntForTheOnlys.sh test || true",
     "findconsole": "./test/lib/huntForTheConsoles.sh test || true",
     "start": "gulp",
-    "test": "gulp transpileTS && LOGGER_DISABLED=1 NODE_ENV=test mocha --bail --recursive --sort --full-trace ./dist/test"
-    "lint": "eslint"
+    "test": "gulp transpileTS && LOGGER_DISABLED=1 NODE_ENV=test mocha --bail --recursive --sort --full-trace ./dist/test",
+    "pretest": "eslint --ignore-path .gitignore ."
   },
   "author": "",
   "license": "ISC",
