--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "findonly": "./test/lib/huntForTheOnlys.sh test || true",
     "findconsole": "./test/lib/huntForTheConsoles.sh test || true",
     "start": "gulp",
-    "test": "gulp transpileTS && LOGGER_DISABLED=1 NODE_ENV=test mocha --bail --recursive --sort --full-trace ./dist/test",
-    "pretest": "eslint --ignore-path .gitignore ."
-  },
+    "test": "gulp transpileTS && LOGGER_DISABLED=1 NODE_ENV=test mocha --bail --recursive --sort --full-trace ./dist/test"
+     },
   "author": "",
   "license": "ISC",
   "dependencies": {
