--- a/package.json
+++ b/package.json
@@ -11,8 +11,27 @@
     "findonly": "./test/lib/huntForTheOnlys.sh test || true",
     "findconsole": "./test/lib/huntForTheConsoles.sh test || true",
     "start": "gulp",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
     "test": "gulp transpileTS && LOGGER_DISABLED=1 NODE_ENV=test mocha --bail --recursive --sort --full-trace ./dist/test"
      },
+{
+  "jest": {
+    "collectCoverageFrom": [
+      "*.js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "statements": 100,
+        "branches": 100,
+        "functions": 100,
+        "lines": 100}
+    }
+  }
+},
   "author": "",
   "license": "ISC",
   "dependencies": {
