--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "findconsole": "./test/lib/huntForTheConsoles.sh test || true",
     "start": "gulp",
     "test:watch": "jest --watch",
-    "test": "gulp transpileTS && LOGGER_DISABLED=1 NODE_ENV=test mocha --bail --recursive --sort --full-trace ./dist/test & jest --covergare"
+    "test": "gulp transpileTS && LOGGER_DISABLED=1 NODE_ENV=test mocha --bail --recursive --sort --full-trace ./dist/test & jest --coverage"
      },
 
   "jest": {
