--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 
   "jest": {
     "collectCoverageFrom": [
-      "*.js"
+      "src/main/webapp/scripts/**/*.js"
     ],
     "coveragePathIgnorePatterns": [
       "/node_modules/"
