Testing Jest and Eslint, 9

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
      },
 
   "jest": {
-    "collectCoverageFrom": {
+    "collectCoverageFrom": [
       "*.js"
-    },
+    ],
     "coverageThreshold": {
       "global": {
         "statements": 70,
