--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "collectCoverageFrom": [
       "*.js"
     ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
     "coverageThreshold": {
       "global": {
-        "statements": 70,
-        "branches": 70,
-        "functions": 70,
-        "lines": 70}
+        "statements": 100,
+        "branches": 100,
+        "functions": 100,
+        "lines": 100}
     }
   },
 
