Testing Jest and Eslint, 13

--- a/package.json
+++ b/package.json
@@ -17,20 +17,17 @@
 
   "jest": {
     "collectCoverageFrom": [
-      "*.js"
+      "**/*.js",
+      "!setup.js",
+      "!babel.config.js",
+      "!**/node_modules/**",
+      "!**/coverage/**"
     ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "statements": 100,
-        "branches": 100,
-        "functions": 100,
-        "lines": 100}
-    }
+    "testEnvironment": "node",
+    "setupFiles": [
+      "<rootDir>/setup.js"
+    ]
   },
-
   "author": "",
   "license": "ISC",
   "dependencies": {
