--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,6 @@ jobs:
 
       - run: npm install
         
-      - run: sudo npm install -g jest
+      - run: npm install jest
 
       - run: npm test  
